# ARIA

./: .env.example  .gitignore  CONTRIBUTING.md  Data_inputs.xlsx  LICENSE  README.md  credentials.py  paper.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml  python-package.yml
.ipynb_checkpoints/: __init__-checkpoint.py  impact_assessment-checkpoint.py  main-checkpoint.ipynb  openai_client-checkpoint.py  requirements_pinned-checkpoint.txt  search_workflow-checkpoint.py  untitled-checkpoint.py
ARIA/: data_handling.py  ecoinvent_processing.py  impact_assessment.py  openai_client.py  plot_lcia.py  project_setup.py  search_utils.py  search_workflow.py
ARIA/.ipynb_checkpoints/: data_handling-checkpoint.py  ecoinvent_processing-checkpoint.py  plot_lcia-checkpoint.py  project_setup-checkpoint.py  search_utils-checkpoint.py
examples/: Data_inputs_ballpoint_pen_example.xlsx  Data_inputs_battery_example.xlsx
paper/: Figures for paper.pptx  paper.bib  paper.md  ~$Figures for paper.pptx
paper/.ipynb_checkpoints/: paper-checkpoint.md
paper/figures/: aria_workflow.ipynb
tests/: conftest.py  test_data_handling.py  test_ecoinvent_processing.py  test_impact_assessment.py  test_search_utils.py
tests/.ipynb_checkpoints/: test_data_handling-checkpoint.py  test_ecoinvent_processing-checkpoint.py  untitled-checkpoint.py
