[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ARIA"
version = "0.1.0"
description = "ARIA: Artificial Intelligence for Sustainability Assessment"
authors = [
    { name = "Dr Evangelos Kallitsis", email = "vkallitsis@outlook.com" },
]
dependencies = [
    "brightway2>=2.4.6",
    "pandas>=2.2.2",
    "openai>=1.57.0",
    "matplotlib>=3.8.4",
    "plotly>=6.0.0",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "requests>=2.31.0",
]
optional-dependencies = {
    "test": [
        "pytest>=8.3.5",
    ],
}

[project.urls]
homepage = "https://github.com/kallitsis/aria"
repository = "https://github.com/kallitsis/aria"

[tool.pip-tools]
