[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ARIA"
version = "0.1.0"
description = "ARIA: Artificial Intelligence for Sustainability Assessment"
authors = [
    { name = "Dr Evangelos Kallitsis", email = "vkallitsis@outlook.com" },
]
requires-python = ">=3.11,<3.13"
license = "BSD-3-Clause"
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
    "brightway2>=2.4.6",
    "pandas>=2.2.2",
    "openai>=1.57.0",
    "matplotlib>=3.8.4",
    "plotly>=6.0.0",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "requests>=2.31.0",
]

[project.urls]
homepage = "https://github.com/kallitsis/aria"
repository = "https://github.com/kallitsis/aria"

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
]

[tool.setuptools]
find_namespace_packages = {where = "src"}  # Adjust this depending on your project structure

[tool.pip-tools]
